# SpherePackings

./: 'sample_packings.pt'  .gitignore  README.md  config.cfg  links.txt  main.py  main2.py  main3.py  main4.py  project_overview.drawio  pyproject.toml  todo.txt
Pipeline/: main2.py  main5.py
SP/: D5Q5R5densities_with_MC.py  DiffusionModel.py  DiffusionModel_PESC.py  EDMModel.py  Final_physics_push.py  FlowMatching_PESC.py  GNN_gemini.py  GraphNNDiffusion.py  Max_Indep_Sets.py  animation.py  data_evaluation.py  data_generation.py  data_load_save.py  huggingface_diffusion_model.ipynb  physics_push.py  physics_push_PESC.py  physics_push_no_torus.py  plot_data_points.py  sample_new_points_from_diff_model.py  thinning.py
SP/ResultViewer/: result_viewer.py
SP/_100/: diffusion_models.py
Spheres_in_Rd/: D5Q5R5data_generation.py  D5Q5R5densities.py  D5Q5R5densities_in_cube.py  DiffusionModel.py  __init__.py  config.cfg  data_evaluation.py  data_generation.py  physics_push.py
Spheres_in_cube/: DiffusionModel_PESC.py  Final_physics_push.py  FlowMatching_PESC.py  __init__.py  animation.py  config.cfg  data_evaluation.py  data_generation_PESC.py  data_generation_PESC_symmetries.py  physics_push_PESC.py  push_summary.txt  sample_new_points_from_diff_model.py
datasets/: 2025-05-12 12_52_21.pt  2025-05-12 13_17_55.pt  2025-05-26 14_11_03.pt  2025-05-27 15_38_12.pt  2025-06-12 00_35_57.pt  2025-06-12 11_27_35.pt  2025-06-17 17_55_41.pt  5d_dataset.pt
diffuse_boost/: __init__.py
diffuse_boost/output/: vmerge.py
diffuse_boost/result_Viewer/: result_viewer.py
(+49 files in other folders)
