[project]
name = "DiffuseBoost"
version = "1.0.0"
description = "Machine learning applied to the Sphere packing problem in d dimensions"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."] 
include = ["diffuse_boost"] 